# compas_shapeop

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  check_solver_methods.py  environment.yml  index.html  pyproject.toml  test_import.py  versions.json
.github/workflows/: build.yml
0.1.1/: api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
0.1.1/api/: compas_shapeop.html
0.1.1/devguide/: cmake_configuration.html  compiler.html  conda_environment.html  contribute.html  overview.html  style.html  types.html
0.1.1/examples/: bending_constraint.html  circularization.html  closeness_constraint_with_target.html  face_normal_force.html  mesh_regularization.html  plane_projection.html  vertex_force_and_closeness_constraint.html
0.1.2/: api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.1.2/api/: compas_shapeop.html
0.1.2/devguide/: cmake_configuration.html  compiler.html  conda_environment.html  contribute.html  overview.html  style.html  types.html
0.1.2/examples/: bending_constraint.html  circularization.html  closeness_constraint_with_target.html  face_normal_force.html  mesh_regularization.html  plane_projection.html  vertex_force_and_closeness_constraint.html
data/: hex_mesh.json
docs/: index.rst  installation.rst  tutorial.rst
docs/api/: compas_shapeop.rst
docs/devguide/: conda_environment.rst  contribute.rst  overview.rst  types.rst
docs/examples/: bending_constraint.rst  circularization.rst  closeness_constraint_with_target.rst  face_normal_force.rst  mesh_regularization.rst  plane_projection.rst  vertex_force_and_closeness_constraint.rst
examples/: balloon.py  balloon_simulation_with_normalforce.py  bending_constraint.py  cable_net_fixed.py  cable_net_with_position.py  circularization.py  circularization_example.py  closeness_constraint_with_target.py  dynamic_simulation.py  face_normal_force.py  mesh_regularization.py  meshsolver_bending_constraint.py  meshsolver_circularization.py  meshsolver_closeness_constraint_with_target.py  meshsolver_face_normal_force.py  meshsolver_mesh_regularization.py  meshsolver_plane_projection.py  meshsolver_vertex_force_and_closeness_constraint.py  minimal_solver_demo.py  optimized_cable_net_with_position.py  optimized_circularization_example.py  optimized_dynamic_simulation.py  optimized_face_normal_force.py  optimized_planarization_example.py  planarization_example.py  plane_projection.py  shapesolver_multiples_meshes.py  vertex_force_and_closeness_constraint.py
examples/mesh_pattern/: mesh_pattern.py
latest/: api.html  devguide.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
latest/api/: compas_shapeop.html
latest/devguide/: cmake_configuration.html  compiler.html  conda_environment.html  contribute.html  overview.html  style.html  types.html
latest/examples/: bending_constraint.html  circularization.html  closeness_constraint_with_target.html  face_normal_force.html  mesh_regularization.html  plane_projection.html  vertex_force_and_closeness_constraint.html
src/: compas.h  compas_api.h  shapeop.cpp  shapeop_nanobind_api.cpp  shapeop_optimized.cpp  shapeoplibrary.cpp
src/compas_shapeop/: __init__.py  direct_solver.py  shapeop.py  shapeop_optimized.py  shapeoplibrary.py  solver.py
src/compas_shapeop/constraints/: __init__.py  constraint.py  mesh_edges.py  mesh_forces.py  mesh_vertices.py
src/compas_shapeop/solvers/: __init__.py  meshsolver.py  shapesolver.py
src/shapeop/custom_constraints/: normalforce.cpp  normalforce.h
src/shapeop/standalone_examples/: balloon.cpp  balloon_box.cpp
src/temp/mesh_pattern/: ShapeOpt.cpp
stable/: index.html
temp/: api.py  balloon_simulation.py  cable_net_fixed.py
tests/: test_basic.py  test_dynamicsolver.py  test_optimized.py  test_shapeop.py
wheelhouse/: compas_shapeop-0.1.1-cp310-cp310-win_amd64.whl  compas_shapeop-0.1.1-cp311-cp311-win_amd64.whl  compas_shapeop-0.1.1-cp312-abi3-win_amd64.whl  compas_shapeop-0.1.1-cp39-cp39-win_amd64.whl
